--- a/BlogPost.html
+++ b/BlogPost.html
@@ -4,7 +4,13 @@
         <link rel="stylesheet" href="Css/Estilo.css">
     </head>
     <body>
-        <h1>Aqui vamos a hacer un BlogPost</h1>
-        <p> Y este es el Parrafo de Inicio</p>
+        <div id = "container">
+            <div id = "post">
+                <h1>Este es el Titulo atractivo e interesante del post</h1>
+                <p>Y este es el parrafo de inicio donde vamos a mostrar las cosas increibles
+                    que podemos hacer con ramas.
+                </p>
+            </div>        
+        </div>
     </body>
 </html>
