--- a/BlogPost.html
+++ b/BlogPost.html
@@ -5,9 +5,10 @@
     </head>
     <body>
         <div id = "container">
-            <div id = "cabecera">
-                Cabecera
-            </div>
+            <div id="cabecera">
+                Hyperblog
+                <span id="tagline">Tu blog de Confianza</span>
+                </div>
             <div id = "post">
                 <h1>Este es el Titulo atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a mostrar las cosas increibles
