--- a/BlogPost.html
+++ b/BlogPost.html
@@ -7,7 +7,7 @@
         <div id = "container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de Confianza</span>
+                <span id="tagline">Tu blog de Maestro</span>
                 </div>
             <div id = "post">
                 <h1>Este es el Titulo atractivo e interesante del post</h1>
@@ -18,6 +18,7 @@
                     Mucho mas que ir a conferencias o salir en Youtube. Excepto
                     si eres un rockstar. Pero estadisticamente no lo eres..... por ahora.
                 </p>
+                <p>Suscribete y dale Like</p>
             </div>        
         </div>
     </body>
