Cambio del Titulo del BlogPost
Porque Puedo

--- a/BlogPost.html
+++ b/BlogPost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Blog Mega Genial</title>       
+        <title>Bienvenido a HyperBlog</title>       
         <link rel="stylesheet" href="Css/Estilo.css">
     </head>
     <body>
