--- a/BlogPost.html
+++ b/BlogPost.html
@@ -6,9 +6,10 @@
     <body>
         <div id = "container">
             <div id="cabecera">
+                <img id = "logo" src="imagenes/dragon.png" /> 
                 Hyperblog
                 <span id="tagline">Tu blog de Cabecera</span>
-                </div>
+            </div>
             <div id = "post">
                 <h1>Este es el Titulo atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a mostrar las cosas increibles
