--- a/BlogPost.html
+++ b/BlogPost.html
@@ -1,5 +1,6 @@
-<html>
+<html lang="es">
     <head>
+        <meta charset="UTF-8">
         <title>Blog Mega Genial</title>       
         <link rel="stylesheet" href="Css/Estilo.css">
     </head>
@@ -18,7 +19,8 @@
                     Mucho mas que ir a conferencias o salir en Youtube. Excepto
                     si eres un rockstar. Pero estadisticamente no lo eres..... por ahora.
                 </p>
-            </div>        
+            </div> 
+            <div id = "footer">Hecho con amor :3  ... &lt;3 </div>       
         </div>
     </body>
 </html>
