--- a/BlogPost.html
+++ b/BlogPost.html
@@ -13,12 +13,12 @@
             </div>
             <div id = "post">
                 <h1>Este es el Titulo atractivo e interesante del post</h1>
-                <p>Y este es el parrafo de inicio donde vamos a mostrar las cosas increibles
+                <p>Y este es el párrafo de inicio donde vamos a mostrar las cosas increíbles
                     que podemos hacer con ramas.
                 </p>
-                <p>Los blogs son la mejor forma de compartir informacion y tus ideas.
+                <p>Los blogs son la mejor forma de compartir información y tus ideas.
                     Mucho mas que ir a conferencias o salir en Youtube. Excepto
-                    si eres un rockstar. Pero estadisticamente no lo eres..... por ahora.
+                    si eres un rockstar. Pero estadísticamente no lo eres..... por ahora.
                 </p>
                 <p>Suscribete y dale Like</p>
             </div> 
