Cambio de Titulo

--- a/BlogPost.html
+++ b/BlogPost.html
@@ -1,7 +1,7 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <title>Blog Mega Genial</title>       
+        <title>Blog Mega Genial 2.0 es un blog del futuro</title>       
         <link rel="stylesheet" href="Css/Estilo.css">
     </head>
     <body>
