--- a/BlogPost.html
+++ b/BlogPost.html
@@ -16,7 +16,7 @@
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a mostrar las cosas incre&iacute;bles
                     que podemos hacer con ramas.
                 </p>
-                <p><img src="imagenes/Halo.jpg" width="100%"></p>
+                <p><a href="https://imgur.com/MrmUc2D"><img src="https://imgur.com/MrmUc2D.jpg" width="100%" title="El jefe Maestro" /></a></p>
                 <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas.
                     Mucho mas que ir a conferencias o salir en Youtube. Excepto
                     si eres un rockstar. Pero estad&iacute;sticamente no lo eres..... por ahora.
